--- a/index.html
+++ b/index.html
@@ -51,16 +51,11 @@
         </div>
     </div>
 
-    <!-- ✅ Dashboard Section -->
     <div class="container">
         <h2>Your Dashboard</h2>
-        <div id="userDashboard">
-            <h3>You are not logged in.</h3>
-            <p>Please log in or sign up.</p>
-        </div>
+        <div id="userDashboard"></div>
     </div>
 
-    <!-- ✅ SoundCloud Track Submission -->
     <div class="container" id="soundcloudSection">
         <h2>Submit Your SoundCloud Track</h2>
         <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
