--- a/index.html
+++ b/index.html
@@ -54,14 +54,12 @@
 
     <div class="container">
         <h2>Your Dashboard</h2>
-        <div id="userDashboard">
-            <p>Loading...</p>
-        </div>
+        <div id="userDashboard"></div>
     </div>
 
     <div class="container" id="soundcloudSection">
         <h2>Submit Your SoundCloud Track</h2>
-        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
+        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL (Example: https://soundcloud.com/artist/track)">
         <button onclick="submitTrack()">Submit</button>
         <p id="currentTrackMessage">No active campaign</p>
     </div>
