--- a/index.html
+++ b/index.html
@@ -47,14 +47,16 @@
         <div class="button-group">
             <button id="signupBtn">Sign Up</button>
             <button id="loginBtn">Login</button>
-            <button id="logoutBtn">Logout</button>
+            <button id="logoutBtn" style="display:none;">Logout</button>
         </div>
         <p id="authMessage"></p>
     </div>
 
     <div class="container">
         <h2>Your Dashboard</h2>
-        <div id="userDashboard"></div>
+        <div id="userDashboard">
+            <p>Please log in or sign up.</p>
+        </div>
     </div>
 
     <div class="container" id="soundcloudSection">
