--- a/index.html
+++ b/index.html
@@ -6,31 +6,33 @@
     <title>TrackRepost - Boost Your Music Reach</title>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- ✅ Load Firebase (Firebase v8 for compatibility) -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <!-- ✅ Load Firebase (Optimized for Performance) -->
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
     <!-- ✅ Initialize Firebase -->
     <script>
-        var firebaseConfig = {
-            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
-            authDomain: "trackrepost-921f8.firebaseapp.com",
-            projectId: "trackrepost-921f8",
-            storageBucket: "trackrepost-921f8.appspot.com",
-            messagingSenderId: "967836604288",
-            appId: "1:967836604288:web:3782d50de7384c9201d365",
-            measurementId: "G-G65Q3HC3R8"
-        };
+        document.addEventListener("DOMContentLoaded", function() {
+            var firebaseConfig = {
+                apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
+                authDomain: "trackrepost-921f8.firebaseapp.com",
+                projectId: "trackrepost-921f8",
+                storageBucket: "trackrepost-921f8.appspot.com",
+                messagingSenderId: "967836604288",
+                appId: "1:967836604288:web:3782d50de7384c9201d365",
+                measurementId: "G-G65Q3HC3R8"
+            };
 
-        if (!firebase.apps.length) {
-            firebase.initializeApp(firebaseConfig);
-            console.log("✅ Firebase Initialized Successfully!");
-        }
+            if (!firebase.apps.length) {
+                firebase.initializeApp(firebaseConfig);
+                console.log("✅ Firebase Initialized Successfully!");
+            }
+        });
     </script>
 
     <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
-    <script src="auth.js" defer></script>
+    <script defer src="auth.js"></script>
 </head>
 
 <body>
@@ -45,9 +47,9 @@
         <input type="email" id="email" placeholder="Enter Email">
         <input type="password" id="password" placeholder="Enter Password">
         <div class="button-group">
-            <button id="signupBtn">Sign Up</button>
-            <button id="loginBtn">Login</button>
-            <button id="logoutBtn">Logout</button>
+            <button id="signupBtn" onclick="signupUser()">Sign Up</button>
+            <button id="loginBtn" onclick="loginUser()">Login</button>
+            <button id="logoutBtn" onclick="logoutUser()">Logout</button>
         </div>
         <p id="authMessage"></p>
     </div>
@@ -60,7 +62,7 @@
     <div class="container" id="soundcloudSection">
         <h2>Submit Your SoundCloud Track</h2>
         <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL (Example: https://soundcloud.com/artist/track)">
-        <button id="submitTrackBtn">Submit</button>
+        <button id="submitTrackBtn" onclick="submitTrack()">Submit</button>
         <p id="currentTrackMessage">No active campaign</p>
     </div>
 
