--- a/index.html
+++ b/index.html
@@ -7,32 +7,30 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- ✅ Load Firebase (Ensuring Proper Order) -->
-    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
     <!-- ✅ Initialize Firebase First -->
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            var firebaseConfig = {
-                apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
-                authDomain: "trackrepost-921f8.firebaseapp.com",
-                projectId: "trackrepost-921f8",
-                storageBucket: "trackrepost-921f8.appspot.com",
-                messagingSenderId: "967836604288",
-                appId: "1:967836604288:web:3782d50de7384c9201d365",
-                measurementId: "G-G65Q3HC3R8"
-            };
+        var firebaseConfig = {
+            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
+            authDomain: "trackrepost-921f8.firebaseapp.com",
+            projectId: "trackrepost-921f8",
+            storageBucket: "trackrepost-921f8.appspot.com",
+            messagingSenderId: "967836604288",
+            appId: "1:967836604288:web:3782d50de7384c9201d365",
+            measurementId: "G-G65Q3HC3R8"
+        };
 
-            if (!firebase.apps.length) {
-                firebase.initializeApp(firebaseConfig);
-                console.log("✅ Firebase Initialized Successfully!");
-            }
-        });
+        if (!firebase.apps.length) {
+            firebase.initializeApp(firebaseConfig);
+            console.log("✅ Firebase Initialized Successfully!");
+        }
     </script>
 
-    <!-- ✅ Ensure auth.js Loads AFTER Firebase is Initialized -->
-    <script defer src="auth.js"></script>
+    <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
+    <script src="auth.js" defer></script>
 </head>
 
 <body>
@@ -57,20 +55,6 @@
     <div class="container">
         <h2>Your Dashboard</h2>
         <div id="userDashboard"></div>
-    </div>
-
-    <div class="container" id="soundcloudSection">
-        <h2>Submit Your SoundCloud Track</h2>
-        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
-        <button id="submitTrackBtn" onclick="submitTrack()">Submit</button>
-        <p id="currentTrackMessage">No active campaign</p>
-    </div>
-
-    <div class="container">
-        <h2>Active Campaigns</h2>
-        <div id="activeCampaigns">
-            <p>Loading campaigns...</p>
-        </div>
     </div>
 
     <footer>
