--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
         <div id="userDashboard"></div>
     </div>
 
+    <div class="container" id="soundcloudSection">
+        <h2>Submit Your SoundCloud Track</h2>
+        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
+        <button id="submitTrackBtn" onclick="submitTrack()">Submit</button>
+        <p id="currentTrackMessage">No active campaign</p>
+    </div>
+
+    <div class="container">
+        <h2>Active Campaigns</h2>
+        <div id="activeCampaigns">
+            <p>Loading campaigns...</p>
+        </div>
+    </div>
+
     <footer>
         <p>© 2025 TrackRepost. All Rights Reserved.</p>
     </footer>
