--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="container" id="soundcloudSection">
         <h2>Submit Your SoundCloud Track</h2>
-        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
+        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL (Example: https://soundcloud.com/artist/track)">
         <button id="submitTrackBtn" onclick="submitTrack()">Submit</button>
         <p id="currentTrackMessage">No active campaign</p>
     </div>
