--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
+    <!-- ✅ Initialize Firebase -->
+    <script>
+        var firebaseConfig = {
+            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
+            authDomain: "trackrepost-921f8.firebaseapp.com",
+            projectId: "trackrepost-921f8",
+            storageBucket: "trackrepost-921f8.appspot.com",
+            messagingSenderId: "967836604288",
+            appId: "1:967836604288:web:3782d50de7384c9201d365",
+            measurementId: "G-G65Q3HC3R8"
+        };
+
+        if (!firebase.apps.length) {
+            firebase.initializeApp(firebaseConfig);
+            console.log("✅ Firebase Initialized Successfully!");
+        }
+    </script>
+
     <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
     <script src="auth.js" defer></script>
 </head>
