--- a/index.html
+++ b/index.html
@@ -85,5 +85,22 @@
         <p>© 2025 TrackRepost. All Rights Reserved.</p>
     </footer>
 
+    <!-- ✅ JavaScript to Handle Reposts -->
+    <script>
+        // ✅ Ensure that the `Repost` buttons work properly
+        document.addEventListener("click", function(event) {
+            if (event.target && event.target.matches(".repostBtn")) {
+                let campaignId = event.target.getAttribute("data-campaign-id");
+                let ownerId = event.target.getAttribute("data-owner-id");
+                let credits = event.target.getAttribute("data-credits");
+
+                if (campaignId && ownerId && credits) {
+                    repostTrack(campaignId, ownerId, credits);
+                }
+            }
+        });
+    </script>
+
 </body>
 </html>
+
