--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -125,7 +124,7 @@
             <div style="padding: 20px;">
                 <p style="font-size: 18px; line-height: 20px;">25000 Credits</p>
                 <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$549.99</p>
-                <a target="_blank" href="https://square.link/u/fwujekvR?src=embed" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #006aff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 6px;">Buy now</a>
+                <a target="_blank" href="https://square.link/u/Hi1T1PWE?src=embed" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #006aff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 6px;">Buy now</a>
             </div>
         </div>
     </div>
@@ -136,4 +135,3 @@
 
 </body>
 </html>
-
