--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <!-- ✅ Payment Buttons Section -->
-    <div id="credit-buttons-container" style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+    <div id="credit-buttons-container" style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; padding: 20px;">
         <!-- Button 1 (500 Credits) -->
         <div style="overflow: auto; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; width: 259px; background: #FFFFFF; border: 1px solid rgba(0, 0, 0, 0.1); box-shadow: -2px 10px 5px rgba(0, 0, 0, 0); border-radius: 10px; font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;">
             <div style="padding: 20px;">
