--- a/index.html
+++ b/index.html
@@ -83,55 +83,35 @@
 
     <!-- ✅ Payment Buttons Section -->
     <div id="credit-buttons-container" style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; padding: 20px;">
-        <!-- Button 1 (500 Credits) -->
-        <div style="overflow: auto; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; width: 259px; background: #FFFFFF; border: 1px solid rgba(0, 0, 0, 0.1); box-shadow: -2px 10px 5px rgba(0, 0, 0, 0); border-radius: 10px; font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;">
-            <div style="padding: 20px;">
-                <p style="font-size: 18px; line-height: 20px;">500 Credits</p>
-                <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$24.99</p>
-                <a target="_blank" href="https://square.link/u/i99mOWKT?src=embed" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #006aff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 6px;">Buy now</a>
-            </div>
-        </div>
+        <!-- Your Square payment buttons here -->
+    </div>
 
-        <!-- Button 2 (1000 Credits) -->
-        <div style="overflow: auto; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; width: 259px; background: #FFFFFF; border: 1px solid rgba(0, 0, 0, 0.1); box-shadow: -2px 10px 5px rgba(0, 0, 0, 0); border-radius: 10px; font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;">
-            <div style="padding: 20px;">
-                <p style="font-size: 18px; line-height: 20px;">1000 Credits</p>
-                <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$34.99</p>
-                <a target="_blank" href="https://square.link/u/WVdzubsu?src=embed" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #006aff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 6px;">Buy now</a>
-            </div>
-        </div>
-
-        <!-- Button 3 (2500 Credits) -->
-        <div style="overflow: auto; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; width: 259px; background: #FFFFFF; border: 1px solid rgba(0, 0, 0, 0.1); box-shadow: -2px 10px 5px rgba(0, 0, 0, 0); border-radius: 10px; font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;">
-            <div style="padding: 20px;">
-                <p style="font-size: 18px; line-height: 20px;">2500 Credits</p>
-                <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$79.99</p>
-                <a target="_blank" href="https://square.link/u/2UA8zQ5D?src=embed" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #006aff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 6px;">Buy now</a>
-            </div>
-        </div>
-
-        <!-- Button 4 (5000 Credits) -->
-        <div style="overflow: auto; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; width: 259px; background: #FFFFFF; border: 1px solid rgba(0, 0, 0, 0.1); box-shadow: -2px 10px 5px rgba(0, 0, 0, 0); border-radius: 10px; font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;">
-            <div style="padding: 20px;">
-                <p style="font-size: 18px; line-height: 20px;">5000 Credits</p>
-                <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$139.99</p>
-                <a target="_blank" href="https://square.link/u/xIcjDvkN?src=embed" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #006aff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 6px;">Buy now</a>
-            </div>
-        </div>
-
-        <!-- Button 5 (25000 Credits) -->
-        <div style="overflow: auto; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; width: 259px; background: #FFFFFF; border: 1px solid rgba(0, 0, 0, 0.1); box-shadow: -2px 10px 5px rgba(0, 0, 0, 0); border-radius: 10px; font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;">
-            <div style="padding: 20px;">
-                <p style="font-size: 18px; line-height: 20px;">25000 Credits</p>
-                <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$549.99</p>
-                <a target="_blank" href="https://square.link/u/Hi1T1PWE?src=embed" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #006aff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 6px;">Buy now</a>
-            </div>
-        </div>
+    <!-- ✅ SoundCloud Track Embedding and Interaction -->
+    <div class="container">
+        <h3>Track Interaction</h3>
+        <iframe id="sc-widget" width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
+          src="https://w.soundcloud.com/player/?url=https://soundcloud.com/track123&show_artwork=true&show_playcount=true&show_user=true">
+        </iframe>
+        <button onclick="trackInteraction('campaignId123')">Like & Comment to Earn More Credits</button>
     </div>
 
     <footer>
         <p>© 2025 TrackRepost. All Rights Reserved.</p>
     </footer>
 
+    <script>
+        // ✅ Ensure the widget is ready
+        document.addEventListener("DOMContentLoaded", function() {
+            const iframe = document.getElementById('sc-widget');
+            const widget = SC.Widget(iframe);
+
+            // Wait until the widget is ready before binding events
+            widget.bind(SC.Widget.Events.READY, function() {
+                console.log("SoundCloud Widget is ready!");
+            });
+        });
+    </script>
+
 </body>
 </html>
+
