--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,15 +7,12 @@
     <title>TrackRepost - Boost Your Music Reach</title>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- ✅ Load Firebase (Ensure Proper Order) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
-    <!-- ✅ Load SoundCloud SDK -->
     <script src="https://connect.soundcloud.com/sdk.js"></script>
 
-    <!-- ✅ Initialize Firebase -->
     <script>
         var firebaseConfig = {
             apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
@@ -32,32 +30,32 @@
         }
     </script>
 
-    <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
     <script src="auth.js" defer></script>
 </head>
-
 <body>
+
+    <!-- Modal for Reposting and Credit Calculation -->
+    <div id="repostModal" style="display: none;">
+        <div id="modalContent">
+            <h3>Repost Track</h3>
+            <p>Credits for reposting: <span id="repostCredits">10</span></p>
+            <p>
+                <input type="checkbox" id="likeCheckbox" checked> Like Track (+1 Credit)
+            </p>
+            <p>
+                <textarea id="commentText" placeholder="Leave a comment (+2 Credits)"></textarea>
+            </p>
+            <p>Total Credits: <span id="totalCredits">10</span></p>
+            <button onclick="submitRepost()">Confirm Repost</button>
+            <button onclick="closeModal()">Cancel</button>
+        </div>
+    </div>
 
     <header>
         <h1>🎵 TrackRepost - Boost Your Music Reach</h1>
         <p>Promote Your Music, Get More Plays</p>
     </header>
 
-    <!-- ✅ Authentication Section -->
-    <div class="container">
-        <h2>Login or Sign Up</h2>
-        <input type="email" id="email" placeholder="Enter Email">
-        <input type="password" id="password" placeholder="Enter Password">
-        <div class="button-group">
-            <button id="signupBtn" onclick="signupUser()">Sign Up</button>
-            <button id="loginBtn" onclick="loginUser()">Login</button>
-            <button id="logoutBtn" onclick="logoutUser()" style="display:none;">Logout</button>
-            <button id="soundcloudLoginBtn" onclick="loginWithSoundCloud()">🔊 Login with SoundCloud</button>
-        </div>
-        <p id="authMessage"></p>
-    </div>
-
-    <!-- ✅ Dashboard Section -->
     <div class="container">
         <h2>Your Dashboard</h2>
         <div id="userDashboard">
@@ -65,15 +63,12 @@
         </div>
     </div>
 
-    <!-- ✅ SoundCloud Track Submission -->
-    <div class="container" id="soundcloudSection">
+    <div class="container">
         <h2>Submit Your SoundCloud Track</h2>
         <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
         <button id="submitTrackBtn" onclick="submitTrack()">Submit</button>
-        <p id="currentTrackMessage">No active campaign</p>
     </div>
 
-    <!-- ✅ Active Campaigns -->
     <div class="container">
         <h2>🔥 Active Campaigns</h2>
         <div id="activeCampaigns">
@@ -81,12 +76,12 @@
         </div>
     </div>
 
-    <!-- ✅ Payment Buttons Section -->
+    <!-- Payment Buttons Section -->
     <div id="credit-buttons-container" style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; padding: 20px;">
         <!-- Your Square payment buttons here -->
     </div>
 
-    <!-- ✅ SoundCloud Track Embedding and Interaction -->
+    <!-- SoundCloud Track Embedding and Interaction -->
     <div class="container">
         <h3>Track Interaction</h3>
         <iframe id="sc-widget" width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
@@ -100,7 +95,7 @@
     </footer>
 
     <script>
-        // ✅ Ensure the widget is ready
+        // Ensure the widget is ready
         document.addEventListener("DOMContentLoaded", function() {
             const iframe = document.getElementById('sc-widget');
             const widget = SC.Widget(iframe);
