--- a/index.html
+++ b/index.html
@@ -38,28 +38,26 @@
 
 <body>
 
-    <!-- Modal for Reposting and Credit Calculation -->
-    <div id="repostModal" style="display: none;">
-        <div id="modalContent">
-            <h3>Repost Track</h3>
-            <p>Credits for reposting: <span id="repostCredits">10</span></p>
-            <p>
-                <input type="checkbox" id="likeCheckbox" checked> Like Track (+1 Credit)
-            </p>
-            <p>
-                <textarea id="commentText" placeholder="Leave a comment (+2 Credits)"></textarea>
-            </p>
-            <p>Total Credits: <span id="totalCredits">10</span></p>
-            <button onclick="submitRepost()">Confirm Repost</button>
-            <button onclick="closeModal()">Cancel</button>
-        </div>
-    </div>
-
     <header>
         <h1>🎵 TrackRepost - Boost Your Music Reach</h1>
         <p>Promote Your Music, Get More Plays</p>
     </header>
 
+    <!-- ✅ Authentication Section -->
+    <div class="container">
+        <h2>Login or Sign Up</h2>
+        <input type="email" id="email" placeholder="Enter Email">
+        <input type="password" id="password" placeholder="Enter Password">
+        <div class="button-group">
+            <button id="signupBtn" onclick="signupUser()">Sign Up</button>
+            <button id="loginBtn" onclick="loginUser()">Login</button>
+            <button id="logoutBtn" onclick="logoutUser()" style="display:none;">Logout</button>
+            <button id="soundcloudLoginBtn" onclick="loginWithSoundCloud()">🔊 Login with SoundCloud</button>
+        </div>
+        <p id="authMessage"></p>
+    </div>
+
+    <!-- ✅ Dashboard Section -->
     <div class="container">
         <h2>Your Dashboard</h2>
         <div id="userDashboard">
@@ -67,50 +65,11 @@
         </div>
     </div>
 
-    <div class="container">
+    <!-- ✅ SoundCloud Track Submission -->
+    <div class="container" id="soundcloudSection">
         <h2>Submit Your SoundCloud Track</h2>
         <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
         <button id="submitTrackBtn" onclick="submitTrack()">Submit</button>
-    </div>
+        <p id="currentTrack
 
-    <div class="container">
-        <h2>🔥 Active Campaigns</h2>
-        <div id="activeCampaigns">
-            <p>Loading campaigns...</p>
-        </div>
-    </div>
-
-    <!-- Payment Buttons Section -->
-    <div id="credit-buttons-container" style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; padding: 20px;">
-        <!-- Your Square payment buttons here -->
-    </div>
-
-    <!-- SoundCloud Track Embedding and Interaction -->
-    <div class="container">
-        <h3>Track Interaction</h3>
-        <iframe id="sc-widget" width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
-          src="https://w.soundcloud.com/player/?url=https://soundcloud.com/track123&show_artwork=true&show_playcount=true&show_user=true">
-        </iframe>
-        <button onclick="trackInteraction('campaignId123')">Like & Comment to Earn More Credits</button>
-    </div>
-
-    <footer>
-        <p>© 2025 TrackRepost. All Rights Reserved.</p>
-    </footer>
-
-    <script>
-        // Ensure the widget is ready
-        document.addEventListener("DOMContentLoaded", function() {
-            const iframe = document.getElementById('sc-widget');
-            const widget = SC.Widget(iframe);
-
-            // Wait until the widget is ready before binding events
-            widget.bind(SC.Widget.Events.READY, function() {
-                console.log("SoundCloud Widget is ready!");
-            });
-        });
-    </script>
-
-</body>
-</html>
 
