--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,9 +11,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-
-    <!-- ✅ Load SoundCloud SDK -->
-    <script src="https://connect.soundcloud.com/sdk.js"></script>
 
     <!-- ✅ Initialize Firebase -->
     <script>
@@ -70,6 +68,21 @@
         <h2>Submit Your SoundCloud Track</h2>
         <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
         <button id="submitTrackBtn" onclick="submitTrack()">Submit</button>
-        <p id="currentTrack
+        <p id="currentTrackMessage">No active campaign</p>
+    </div>
 
+    <!-- ✅ Active Campaigns -->
+    <div class="container">
+        <h2>🔥 Active Campaigns</h2>
+        <div id="activeCampaigns">
+            <p>Loading campaigns...</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>© 2025 TrackRepost. All Rights Reserved.</p>
+    </footer>
+
+</body>
+</html>
 
