--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>TrackRepost - Boost Your Music Reach</title>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- ✅ Load Firebase (Ensure Proper Order) -->
+    <!-- ✅ Load Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
+    <!-- ✅ Load SoundCloud SDK -->
+    <script src="https://connect.soundcloud.com/sdk.js"></script>
+
     <!-- ✅ Initialize Firebase -->
     <script>
         var firebaseConfig = {
-            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
+            apiKey: "YOUR_API_KEY",
             authDomain: "trackrepost-921f8.firebaseapp.com",
             projectId: "trackrepost-921f8",
             storageBucket: "trackrepost-921f8.appspot.com",
@@ -22,19 +25,16 @@
             appId: "1:967836604288:web:3782d50de7384c9201d365",
             measurementId: "G-G65Q3HC3R8"
         };
-
+        
         if (!firebase.apps.length) {
             firebase.initializeApp(firebaseConfig);
             console.log("✅ Firebase Initialized Successfully!");
         }
     </script>
-
-    <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
     <script src="auth.js" defer></script>
 </head>
 
 <body>
-
     <header>
         <h1>🎵 TrackRepost - Boost Your Music Reach</h1>
         <p>Promote Your Music, Get More Plays</p>
@@ -46,10 +46,9 @@
         <input type="email" id="email" placeholder="Enter Email">
         <input type="password" id="password" placeholder="Enter Password">
         <div class="button-group">
-            <button id="signupBtn" onclick="signupUser()">Sign Up</button>
-            <button id="loginBtn" onclick="loginUser()">Login</button>
-            <button id="logoutBtn" onclick="logoutUser()" style="display:none;">Logout</button>
-            <button id="soundcloudLoginBtn" onclick="loginWithSoundCloud()">🔊 Login with SoundCloud</button>
+            <button onclick="signupUser()">Sign Up</button>
+            <button onclick="loginUser()">Login</button>
+            <button onclick="logoutUser()" style="display:none;">Logout</button>
         </div>
         <p id="authMessage"></p>
     </div>
@@ -62,26 +61,18 @@
         </div>
     </div>
 
-    <!-- ✅ SoundCloud Track Submission -->
-    <div class="container" id="soundcloudSection">
-        <h2>Submit Your SoundCloud Track</h2>
-        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
-        <button id="submitTrackBtn" onclick="submitTrack()">Submit</button>
-        <p id="currentTrackMessage">No active campaign</p>
-    </div>
-
-    <!-- ✅ Active Campaigns -->
-    <div class="container">
-        <h2>🔥 Active Campaigns</h2>
-        <div id="activeCampaigns">
-            <p>Loading campaigns...</p>
-        </div>
-    </div>
+    <!-- ✅ Navigation -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="campaigns.html">Campaigns</a></li>
+            <li><a href="buy-credits.html">Buy Credits</a></li>
+        </ul>
+    </nav>
 
     <footer>
         <p>© 2025 TrackRepost. All Rights Reserved.</p>
     </footer>
-
 </body>
 </html>
 
