--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- ✅ Initialize Firebase -->
     <script>
         var firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
+            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
             authDomain: "trackrepost-921f8.firebaseapp.com",
             projectId: "trackrepost-921f8",
             storageBucket: "trackrepost-921f8.appspot.com",
