--- a/public/campaigns.html
+++ b/public/campaigns.html
@@ -1,21 +1,36 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrackRepost - Campaigns</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS -->
+    
+    <!-- ✅ Load Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+    <!-- ✅ Load SoundCloud SDK -->
+    <script src="https://connect.soundcloud.com/sdk.js"></script>
+
+    <!-- ✅ Load Firebase Configuration -->
+    <script src="firebaseConfig.js"></script>
+
+    <!-- ✅ Load Authentication & Script AFTER Firebase -->
     <script src="auth.js" defer></script>
 </head>
+
 <body>
     <header>
         <h1>🔥 Active Campaigns</h1>
         <p>Explore the campaigns and repost to earn credits!</p>
     </header>
 
+    <!-- ✅ Campaigns Container -->
     <div id="campaignsContainer">
-        <p>Loading campaigns...</p>
+        <p>⏳ Loading campaigns...</p>
     </div>
 
     <footer>
@@ -23,7 +38,7 @@
     </footer>
 
     <script>
-        // Loading active campaigns into this page
+        // ✅ FUNCTION: Load and Display Campaigns
         window.loadCampaigns = function () {
             const campaignsDiv = document.getElementById("campaignsContainer");
 
@@ -35,11 +50,18 @@
                 } else {
                     snapshot.forEach(doc => {
                         const data = doc.data();
+                        const campaignId = doc.id;
+                        const trackUrl = data.track;
+
                         campaignsDiv.innerHTML += `
                             <div class="campaign">
-                                <h3>🔥 ${data.track}</h3>
-                                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=${encodeURIComponent(data.track)}"></iframe>
-                                <button onclick="repostTrack('${doc.id}', '${data.owner}', '${data.credits}')">Repost & Earn Credits</button>
+                                <h3>🔥 Track Promotion</h3>
+                                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
+                                    src="https://w.soundcloud.com/player/?url=${encodeURIComponent(trackUrl)}">
+                                </iframe>
+                                <button onclick="repostTrack('${campaignId}', '${data.owner}', '${trackUrl}')">
+                                    Repost & Earn Credits
+                                </button>
                             </div>
                         `;
                     });
@@ -47,6 +69,7 @@
             });
         };
 
+        // ✅ AUTOLOAD CAMPAIGNS
         document.addEventListener("DOMContentLoaded", loadCampaigns);
     </script>
 </body>
